# fire_extinguishing_robot

./: Cargo.toml  README.md
src/: logging.rs  main.rs
